K6OMALTP:upd8d .zshrc mainly to include special-case code in prepR8ion for my PerlConfInTheCloud LightningTalk, addeed xe 'xte' wrapper in a8.pm && added ~/gfx/sho/LT-*.xe file to autom8 most of my talk's input && added the extension in .lrc, upd8d CJ to very stringently limit output to only the 20ths of June for U.St8s to keep quick but should be reverted probably rather soon, upd8d cred.utf to be only slightly less ridiculous about wanting virgins and Rapture but still asking to be written in for U.S.President, upd8d default ckm8 scaling to start larger just for my main host Oni, upd8d g3 to quell warnings about attempting to concatN8 undefined values after sequential ReadKey calls which try to gather entire Escape codes probably primarily for arrow-keys, && also added a couple pre-colored ~/gfx/sho/ .ansi files for 8plc all without the major boring middle gM8ria primes and altern8 represent8ions chunk as well as one for calN both just for 160x50 terminals;

--- a/.lrc
+++ b/.lrc
@@ -1,5 +1,5 @@
 # F1RLLK2K:~/.lrc  by PipStuart <Pip@CPAN.Org> as an altern8 format for .lsrc ideally having new ~/bin/lrc gNR8 either from the other;
-# $VERSION='0.0';$d8VS='K69MJk59'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='K6MMGhxe'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
@@ -709,10 +709,10 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .build
 .ninja                                     # meson advanced build filz used for GitHub flatpak's libportal to upd8 xdg-desktop-portal(-gtk)? there too
 .pause
-.fbrc
 .prf                                       # Kenta Cho Sh'mups preferences && high-score d8a like for Parsec47 and R-Rootage
 .pri                          c            # maybe Qt configure.pri as PRoject or PRofile Init or Include (&& also altern8 .prf files in similar loc8ions)
 .rc
+.fbrc
 .mrbrc
 .captrc
 .deityrc
@@ -739,6 +739,7 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .gpg~                         c
 .pgp
 .sxp
+.xe                                        # Octology a8.pm X-windows Event (`xte`) autom8ion wrapper script (stRted2dMonstr8 functionaliT of manual cmndz)
 .xd2                                       # xdotool command script to gener8 ~/dvl/t8/**/xl8/ d8a files in attempt to autom8 complex transl8ion evalU8ions
 .xinitrc                                   # ch2brItCyan from drkGrn .x* dflt4xinitz
 .xinitrc-compiz
